--- a/MusicCityAnimalRescueManagement/Views/Vettings/CatEdit.cshtml
+++ b/MusicCityAnimalRescueManagement/Views/Vettings/CatEdit.cshtml
@@ -17,6 +17,7 @@
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         @Html.HiddenFor(model => model.id)
         @Html.HiddenFor(model => model.AnimalId)
+        @Html.HiddenFor(model => model.VettingTotalDecimal)
         @*<div class="form-group">
             @Html.LabelFor(model => model.AnimalId, "AnimalId", htmlAttributes: new { @class = "control-label col-md-2"})
             <div class="col-md-10">
