--- a/MusicCityAnimalRescueManagement/Views/Equipment/Details.cshtml
+++ b/MusicCityAnimalRescueManagement/Views/Equipment/Details.cshtml
@@ -8,7 +8,7 @@
 <h2>Details</h2>
 
 <div>
-    <h4>EquipmentItem</h4>
+    <h4>Item Details</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
@@ -33,6 +33,14 @@
 
         <dd>
             @Html.DisplayFor(model => model.ItemNumber)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.ApproxValueDecimal)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.ApproxValueDecimal)
         </dd>
 
     </dl>
