--- a/MusicCityAnimalRescueManagement/Views/Equipment/Edit.cshtml
+++ b/MusicCityAnimalRescueManagement/Views/Equipment/Edit.cshtml
@@ -10,7 +10,7 @@
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
-    
+
     <div class="form-horizontal">
         <h4>Editing Item# @Html.DisplayTextFor(model => model.ItemNumber)</h4>
         <hr />
@@ -27,10 +27,17 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.LocationId, "LocationId", htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.LocationId, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.DropDownList("LocationId",ViewBag.LocationList as SelectList, htmlAttributes: new { @class = "form-control" })
+                @Html.DropDownList("LocationId", ViewBag.LocationList as SelectList, htmlAttributes: new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.LocationId, "", new { @class = "text-danger" })
+            </div>
+        </div>
+        <div class="form-group">
+            @Html.LabelFor(model => model.ApproxValueDecimal, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.ApproxValueDecimal, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.ApproxValueDecimal, "", new { @class = "text-danger" })
             </div>
         </div>
 
