--- a/MusicCityAnimalRescueManagement/Views/Vettings/DogEdit.cshtml
+++ b/MusicCityAnimalRescueManagement/Views/Vettings/DogEdit.cshtml
@@ -16,6 +16,8 @@
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         @Html.HiddenFor(model => model.id)
         @Html.HiddenFor(model => model.AnimalId)
+        @Html.HiddenFor(model => model.VettingTotalDecimal)
+
 
 
 
