--- a/MusicCityAnimalRescueManagement/Views/Locations/Details.cshtml
+++ b/MusicCityAnimalRescueManagement/Views/Locations/Details.cshtml
@@ -18,6 +18,21 @@
         <dd>
             @Html.DisplayFor(model => model.name)
         </dd>
+        <dt>
+            @Html.DisplayNameFor(model => model.Contacts)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Contacts)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.Email)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Email)
+        </dd>
 
         <dt>
             @Html.DisplayNameFor(model => model.Address)
@@ -25,6 +40,13 @@
 
         <dd>
             @Html.DisplayFor(model => model.Address)
+        </dd>
+        <dt>
+            @Html.DisplayNameFor(model => model.City)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.City)
         </dd>
 
         <dt>
