--- a/MusicCityAnimalRescueManagement/Views/Locations/Edit.cshtml
+++ b/MusicCityAnimalRescueManagement/Views/Locations/Edit.cshtml
@@ -10,7 +10,7 @@
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
-    
+
     <div class="form-horizontal">
         <h4>Location</h4>
         <hr />
@@ -24,12 +24,34 @@
                 @Html.ValidationMessageFor(model => model.name, "", new { @class = "text-danger" })
             </div>
         </div>
+        <div class="form-group">
+            @Html.LabelFor(model => model.Contacts, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.Contacts, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.Contacts, "", new { @class = "text-danger" })
+            </div>
+        </div>        
+        <div class="form-group">
+            @Html.LabelFor(model => model.Email, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.Email, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.Email, "", new { @class = "text-danger" })
+            </div>
+        </div>
 
         <div class="form-group">
             @Html.LabelFor(model => model.Address, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.Address, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.Address, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group">
+            @Html.LabelFor(model => model.City, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.City, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.City, "", new { @class = "text-danger" })
             </div>
         </div>
 
@@ -98,7 +120,7 @@
                 </div>
             </div>
         </div>
-        
+
         <hr />
 
         <div class="form-group">
@@ -119,8 +141,8 @@
                     @Html.ValidationMessageFor(model => model.isRabiesVaxLocation, "", new { @class = "text-danger" })
                 </div>
             </div>
-        </div>        
-        
+        </div>
+
         <div class="form-group">
             @Html.LabelFor(model => model.isAdoptionVenue, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
