--- a/MusicCityAnimalRescueManagement/Views/Locations/Index.cshtml
+++ b/MusicCityAnimalRescueManagement/Views/Locations/Index.cshtml
@@ -17,7 +17,16 @@
                 @Html.DisplayNameFor(model => model.name)
             </th>
             <th>
+                @Html.DisplayNameFor(model => model.Email)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Contacts)
+            </th>
+            <th>
                 @Html.DisplayNameFor(model => model.Address)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.City)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.PhoneNumber)
@@ -61,7 +70,16 @@
                     @Html.DisplayFor(modelItem => item.name)
                 </td>
                 <td>
+                    @Html.DisplayFor(modelItem => item.Email)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Contacts)
+                </td>
+                <td>
                     @Html.DisplayFor(modelItem => item.Address)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.City)
                 </td>
                 <td>
                     @Html.DisplayFor(modelItem => item.PhoneNumber)
@@ -94,8 +112,8 @@
                     @Html.DisplayFor(modelItem => item.isRabiesVaxLocation)
                 </td>
                 <td>
-                    @Html.ActionLink("Edit", "Edit", new { id = item.id }) 
-                    @Html.ActionLink("Details", "Details", new { id = item.id }) 
+                    @Html.ActionLink("Edit", "Edit", new { id = item.id })
+                    @Html.ActionLink("Details", "Details", new { id = item.id })
                     @Html.ActionLink("Delete", "Delete", new { id = item.id })
                 </td>
             </tr>
