--- a/MusicCityAnimalRescueManagement/Views/Animals/Index.cshtml
+++ b/MusicCityAnimalRescueManagement/Views/Animals/Index.cshtml
@@ -148,7 +148,7 @@
                     @Html.DisplayFor(modelItem => item.VettingTotalDecimal)
                 </td>
                 <td>
-                    @(item.VettingTotalDecimal + item.PullFee)
+                    $@(item.VettingTotalDecimal + item.PullFee)
                 </td>
                 <td>
                     @Html.DisplayFor(modelItem => item.AdoptionFee)
@@ -317,7 +317,7 @@
                     @Html.DisplayFor(modelItem => item.VettingTotalDecimal)
                 </td>
                 <td>
-                    @(item.VettingTotalDecimal + item.PullFee)
+                    $@(item.VettingTotalDecimal + item.PullFee)
                 </td>
                 <td>
                     @Html.DisplayFor(modelItem => item.AdoptionFee)
@@ -486,7 +486,7 @@
                     @Html.DisplayFor(modelItem => item.VettingTotalDecimal)
                 </td>
                 <td>
-                    @(item.VettingTotalDecimal + item.PullFee)
+                    $@(item.VettingTotalDecimal + item.PullFee)
                 </td>
                 <td>
                     @Html.DisplayFor(modelItem => item.AdoptionFee)
@@ -655,7 +655,7 @@
                     @Html.DisplayFor(modelItem => item.VettingTotalDecimal)
                 </td>
                 <td>
-                    @(item.VettingTotalDecimal + item.PullFee)
+                    $@(item.VettingTotalDecimal + item.PullFee)
                 </td>
                 <td>
                     @Html.DisplayFor(modelItem => item.AdoptionFee)
