--- a/MusicCityAnimalRescueManagement/Views/Animals/Edit.cshtml
+++ b/MusicCityAnimalRescueManagement/Views/Animals/Edit.cshtml
@@ -16,6 +16,9 @@
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         @Html.HiddenFor(model => model.id)
+        @Html.HiddenFor(model => model.SimpleMCARId)
+        @Html.HiddenFor(model => model.VettingTotalDecimal)
+        @Html.HiddenFor(model => model.InRescueTime)
 
         <div class="form-group">
             @Html.LabelFor(model => model.MCARId, htmlAttributes: new { @class = "control-label col-md-2" })
@@ -25,24 +28,24 @@
             </div>
         </div>
 
-        <div class="form-group">
+        @*<div class="form-group">
             @Html.LabelFor(model => model.SimpleMCARId, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.SimpleMCARId, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.SimpleMCARId, "", new { @class = "text-danger" })
             </div>
-        </div>
+        </div>*@
 
         <div class="form-group">
-            @Html.LabelFor(model => model.SexId, "SexId", htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.SexId, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.DropDownList("SexId", ViewBag.SexId, htmlAttributes: new { @class = "form-control" })
+                @Html.DropDownList("SexId", null, htmlAttributes: new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.SexId, "", new { @class = "text-danger" })
             </div>
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.AnimalTypeID, "AnimalTypeID", htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.AnimalTypeID, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.DropDownList("AnimalTypeID", null, htmlAttributes: new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.AnimalTypeID, "", new { @class = "text-danger" })
@@ -124,7 +127,7 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.CurrentFosterID, "CurrentFosterID", htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.CurrentFosterID, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.DropDownList("CurrentFosterID", null, htmlAttributes: new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.CurrentFosterID, "", new { @class = "text-danger" })
@@ -132,7 +135,7 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.PullLocationID, "PullLocationID", htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.PullLocationID, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.DropDownList("PullLocationID", null, htmlAttributes: new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.PullLocationID, "", new { @class = "text-danger" })
@@ -200,18 +203,10 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.AdoptionLocationId, "AdoptionLocationId", htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.AdoptionLocationId, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.DropDownList("AdoptionLocationId", null, htmlAttributes: new { @class = "form-control" })
+                @Html.DropDownList("AdoptionLocationId", null, "Select a location", htmlAttributes: new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.AdoptionLocationId, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.InRescueTime, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.InRescueTime, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.InRescueTime, "", new { @class = "text-danger" })
             </div>
         </div>
 
